# Procedural-Pixel-Engine

./: .gitignore  BUG_FIX_REPORT.md  BUG_LIST.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  PACKAGE_SUMMARY.md  PROJECT_COMPLETION.md  README.md  RELEASE.md  ROADMAP.md  index.html  package.json  test-package.js  tsconfig.build.json  tsconfig.json  vite.config.ts
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
assets/: mapping.json
assets/blueprints/: 24fdefe8-183a-487d-855e-e12b34958450.json  4aaa01d1-79e2-4966-b29b-3da3852b7194.json  5b89bdf7-9767-4ec1-a1ed-4d13efebded5.json
assets/scenes/: starter-scene.json
docs/: API.md  GETTING_STARTED.md
docs/planning/: NEXT_STEPS.md  (+2 more)
scripts/: build-package.js
src/: index.ts
src/rust/: Cargo.toml
src/rust/src/: lib.rs
src/rust/src/advanced/: mod.rs
src/rust/src/ai/: mod.rs
src/rust/src/assets/: mod.rs
src/rust/src/audio/: mod.rs
src/rust/src/ecosystem/: mod.rs
src/rust/src/hybrid/: mod.rs
src/rust/src/input/: mod.rs
src/rust/src/math/: mod.rs
src/rust/src/networking/: mod.rs  monitoring.rs  optimization.rs  security.rs  serialization.rs  testing.rs
src/rust/src/particles/: mod.rs
src/rust/src/physics/: mod.rs
src/rust/src/physics/enhanced/: mod.rs
src/rust/src/plugins/: mod.rs
src/rust/src/profiler/: mod.rs
src/rust/src/save/: mod.rs
src/rust/src/security/: mod.rs
src/rust/src/testing/: mod.rs
src/rust/src/ui/: mod.rs
src/rust/src/utils/: mod.rs
src/rust/src/visual/: mod.rs
src/rust/src/world/: mod.rs
(+244 files in other folders)
