[package]
name = "procedural-pixel-engine-core"
version = "0.1.0"
edition = "2021"
description = "High-performance core for Procedural Pixel Engine"
license = "MIT"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde-wasm-bindgen = "0.5"
js-sys = "0.3"
web-sys = "0.3"
console_error_panic_hook = "0.1"
bincode = "1.3"
nalgebra = "0.32.3"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"

[profile.dev]
opt-level = 1
debug = true
